src/app.module.scss
body {
  background-image: url("/background.png");
  background-repeat:repeat;
  background-size:auto;
}
.container{
  background-color: rgba(255, 255, 255, 0.72);
  overflow-x: hidden;
}

.foto{
  width: 100%;
}

.containerAuxiliar{
  display: flex;
  align-items: center;
  justify-content: center;
}

.tituloSquad{
  color: #4A007F;
  font-weight: 400;
  font-size: 101px;
  margin: 120px 0 80px 0;
  text-align: center;
}

.containerCardIbson{
  width: 1063px;
  height: 402px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 55px;
  box-shadow: rgba(0, 0, 0, 0.15) 3px 3px 3px;
  border-radius: 3rem;
  position: relative;
  background-color: #FFFFFF;
  padding: 67px 208px;

  &__containerFoto{
    &__foto{
      border-radius: 50%;
      width: 264px;
      height: 264px;
    }
  }

  &__containerInfos{
    &__pessoa{
      display: flex;
      align-items: center;
      gap: 4rem;

      &__nome {
        font-weight: 800;
        font-size: 32px;
        color: #4E3494;
      }

      &__funcao{
        font-weight: 800;
        font-size: 24px;
        color: #4E3494;
      }

      .imagemLinkedin{
        width: 57px;
        height: 57px;
      }
    }

    &__containerSobre{
      width: 568px;
      margin: 24px 0 0 0;

      &__sobre{
        font-size: 18px;
        font-weight: 400;
        color: #4E3494;
        line-height: 21.76px;
      }
    }
  }
}

.linhaDivisoria{
  display: flex;
  flex-direction: center;
  justify-content: center;
  margin: 120px 0;
}

@media screen and (min-width: 360px) and (max-width: 425px){
  body{
    overflow-x: hidden;
  }

  .foto{
    max-width: 100%;
  }
}

@media screen and (max-width: 425px){
  body{
    width: 100%;
  }

  .foto{
    max-width: 100%;
  }
}

@media screen and (min-width: 1280px) and (max-width: 1500px){
  .containerCardIbson{
    width: 932px;
    height: 353px;

    &__containerFoto{
      &__foto{
        width: 235px;
        height: 235px;
      }
    }
  }

}

